--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "browserlist": "^1.0.1",
         "next": "latest",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "styled-components": "^5.3.5",
-		"browserlist": "^1.0.1"
+        "styled-components": "^5.3.5"
     },
     "devDependencies": {
         "@types/node": "^18.0.0",
