--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "browserlist": "^1.0.1",
+        "concurrently": "^8.2.0",
         "next": "13.1.1",
         "next-sitemap": "^3.1.43",
         "react": "^18.2.0",
