--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "palmer.earth",
     "version": "4.0.0",
     "private": true,
-    "author": "Alex Palmer <alex@palmer.earth",
+    "author": "Alex Palmer",
     "license": "UNLICENSED",
     "description": "Personal website.",
     "scripts": {
@@ -20,23 +20,23 @@
     "dependencies": {
         "browserlist": "^1.0.1",
         "concurrently": "^8.2.0",
-        "next": "13.1.1",
-        "next-sitemap": "^4.0.9",
+        "next": "14.0.4",
+        "next-sitemap": "^4.2.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "styled-components": "^5.3.6"
+        "styled-components": "^6.1.8"
     },
     "devDependencies": {
-        "@types/node": "^18.11.18",
-        "@types/react": "^18.0.26",
-        "@types/react-dom": "^18.0.10",
+        "@types/node": "^20.10.8",
+        "@types/react": "^18.2.47",
+        "@types/react-dom": "^18.2.18",
         "@types/styled-components": "^5.1.25",
         "eslint": "^8.31.0",
         "eslint-config-prettier": "^8.5.0",
         "husky": "^8.0.2",
         "lint-staged": "^13.1.0",
         "prettier": "^2.8.1",
-        "typescript": "^4.9.4"
+        "typescript": "^5.3.3"
     },
     "browserslist": [
         "defaults",
