--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
               uses: actions/cache@v3
               id: yarn-cache
               with:
-                  path: ${{ steps.yarn-cache-dir.outputs.dir }}
+                  path: ~/.yarn/cache
                   key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
                   restore-keys: |
                       ${{ runner.os }}-yarn-
@@ -28,5 +28,3 @@ jobs:
               run: yarn install --frozen-lockfile --silent
             - name: Lint
               run: yarn lint
-            - name: Typecheck
-              run: yarn typecheck
