--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,20 +11,24 @@ jobs:
               uses: actions/setup-node@v4.0.1
               with:
                   node-version: "20"
-            # Cache node_modules for faster CI runs if the yarn.lock doesn't change change
-            - name: Get yarn cache directory path
-              id: yarn-cache-dir
-              run: echo "::set-output name=dir::$(yarn cache dir)"
-            - name: Restore yarn cache
-              uses: actions/cache@v3
-              id: yarn-cache
+            - name: Setup pnpm
+              uses: pnpm/action-setup@v4
               with:
-                  path: ~/.yarn/cache
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+                  version: 9
+                  run_install: false
+            - name: Get pnpm store directory
+              shell: bash
+              run: |
+                  echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+            - name: Setup pnpm cache
+              uses: actions/cache@v3
+              with:
+                  path: ${{ env.STORE_PATH }}
+                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
                   restore-keys: |
-                      ${{ runner.os }}-yarn-
-            # Throw an error if the yarn.lock file doesn't match the installed dependencies (rather than updating it in-place, which it does by default locally)
-            - name: Install
-              run: yarn install --frozen-lockfile --silent
+                      ${{ runner.os }}-pnpm-store-
+            # Throw an error if the pnpm-lock.yaml file doesn't match the installed dependencies
+            - name: Install dependencies
+              run: pnpm install --frozen-lockfile
             - name: Lint
-              run: yarn lint
+              run: pnpm lint
