--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
         "start": "next start",
         "start:ci": "INSECURE_AUTH=true pnpm run start",
         "lint": "next lint",
-        "prepare": "husky install"
+        "prepare": "husky"
     },
     "dependencies": {
         "next": "15.5.3",
         "next-sitemap": "^4.2.3",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
         "styled-components": "^6.1.19"
     },
     "devDependencies": {
-        "@types/node": "^24.0.10",
-        "@types/react": "^19.1.8",
-        "@types/react-dom": "^19.1.6",
+        "@types/node": "^24.6.2",
+        "@types/react": "^19.2.0",
+        "@types/react-dom": "^19.2.0",
         "@types/styled-components": "^5.1.34",
-        "eslint": "^9.17.0",
-        "eslint-config-next": "^15.5.3",
-        "eslint-config-prettier": "^10.1.5",
+        "eslint": "^9.37.0",
+        "eslint-config-next": "^15.5.4",
+        "eslint-config-prettier": "^10.1.8",
         "husky": "^9.1.7",
-        "lint-staged": "^16.1.2",
+        "lint-staged": "^16.2.3",
         "prettier": "^3.6.2",
-        "typescript": "^5.8.3"
+        "typescript": "^5.9.3"
     },
     "browserslist": [
         "defaults",
