--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,21 @@
 		"esModuleInterop": true,
 		"module": "esnext",
 		"resolveJsonModule": true,
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"isolatedModules": true,
-		"jsx": "preserve"
+		"jsx": "preserve",
+		"plugins": [
+			{
+				"name": "next"
+			}
+		],
+		"paths": {
+			"@/*": ["./src/*"]
+		}
 	},
 	"include": [
 		"next-env.d.ts",
+		".next/types/**/*.ts",
 		"**/*.ts",
 		"**/*.tsx"
 	],
