--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,5 @@ jobs:
               run: pnpm install --frozen-lockfile
             - name: Lint
               run: pnpm lint
+            - name: Typecheck
+              run: pnpm tsc --noEmit
